# COPT-Example

./: READMD.md  README.md  json_to_csv_converter.py  problem.md  problem_2.md  raw_problem.md  result.txt  solve_production_planning.py  validate_solution.py  verification_checklist.md
IndustryOR/: IndustryOR.csv
IndustryOR/id01/: problem.md  result.txt  solve_problem.py
IndustryOR/id03/: problem.md  solve_production_planning.py
IndustryOR/id04/: problem.md  pyproject.toml  result.txt  solve_bomber.py
IndustryOR/id05/: problem.md  result.txt  solve_bomber.py
IndustryOR/id06/: production_planning.py  result.txt
IndustryOR/id07/: problem.md  result.txt  solve_bomber.py
IndustryOR/id08/: problem.md  result.txt  solve_problem.py
IndustryOR/id09/: detailed_results.txt  final_summary.txt  problem.md  result.txt  toy_production.mps  toy_production.sol
IndustryOR/id10/: problem.md  (+2 more)
id03/: result.txt
id06/: result.txt
id09/: production_planning.py  result.txt  toy_production.lp
id12/: production_planning.py  pyproject.toml  result.txt  toy_production.lp
id14/: meal_planning.lp  meal_planning.mps  meal_planning.sol  result.txt
id26/: result.txt  workforce_scheduling.lp  workforce_scheduling.mps  workforce_scheduling.py
id27/: production_planning.lp  result.txt
id31/: problem.md  production_planning.py  result.txt
id34/: production_planning.py  result.txt
id36/: problem.md  result.txt  vrphtw_solver.py
id47/: farm_optimization.py  result.txt
output/: detailed_results.json  production_planning.lp  production_planning.sol  weekly_results.csv
(+68 files in other folders)
